--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ jobs:
       - image: ghdl/ext
     steps:
       - checkout
+      - setup_remote_docker
       - run:
           name: Greeting
           command: echo Hello, world.
